# assistant-axis

./: .gitignore  .nojekyll  custom.css  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
assistant_axis/: models.py
data/: judgments.parquet  samples.parquet
pipeline/: bench_vllm_9k.py  bench_vllm_batched.py  debug_vllm_minimal.py  debug_vllm_output.py  debug_vllm_raw.py  debug_vllm_steer_gen.py  run_constitution_steering_vllm.sh  test_persona_constitution_vllm.py  test_vllm_steering.py
pipeline/article/: _quarto.yml  index.qmd
pipeline/article/data/: summary.csv  summary.parquet
pipeline/article/scripts/: prepare_data.py
